# automata

./: .codecov.yml  .gitignore  CHANGELOG.md  CODE_DE_CONDUITE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  LICENSE.md  README.fr.md  README.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  decision.yml  feature.yml  maintenance.yml
.github/workflows/: ci-build.yml  ci-coverage.yml  ci-publish-pypi.yml  ci-publish-testpypi.yml  ci-quality.yml  ci-tests.yml  mirror.yml  python-ci-quality.yml  python-ci-tests.yml  release-drafter-workflow.yml
.github/worklows/: main.yaml
.tox-config/: coverage-version.txt  versions.txt
.tox-config/requirements/: full.txt
.tox-config/scripts/: coverage.sh  test.sh
doc/source/: alphabet.rst  api.rst  chomsky.rst  conf.py  fsm.rst  index.rst  install.rst  kleene.rst  theory.rst
docs/conf/: .readthedocs.yaml
docs/source/: api.rst  conf.py  fsm.rst  index.rst  install.rst  theory.rst
docs/source/api/: advanced.rst  exceptions.rst  extended.rst  index.rst
docs/source/guide/: index.rst  install.rst  quickstart.rst  requirements.txt  usage.rst
docs/source/theory/: grammar.rst  index.rst  theory.rst
docs/source/theory/chomsky/: alphabet.rst  automata.rst  chomsky.rst  index.rst
src/fsm_tools/: __init__.py  advanced.py  constants.py  core.py  django.py  exception.py  extended.py  lightweight.py
src/fsm_tools/locales/: automata.json  errors.json
src/fsm_tools/utils/: common.py  i18n.py  json.py
tests/: conftest.py  test_00_class_FSM.py  test_00_errors_locales.py  test_00_exceptions.py  test_00_exceptions_messages.py  test_00_excpetions-new.py  test_00_excpetions.py  test_01_class_FSM.py  test_01_class_extFSM.py  test_02_class_extFSM.py  test_03_class_contextFSM.py  test_04_grammar.py  test_05_class_automaton.py  test_06_turing_machine.py
tests/00_Primitives/: test_00_api.py
tests/01_exceptions/: test_00_exceptions.py  test_01_exceptions_messages.py
tests/02_automata/: test_00_grammar.py  test_01_class_automaton.py  test_02_turing_machine.py  test_03_lba.py  test_07_pushdown_automaton.py
tests/03_extended/: test_00_extended_tm.py  test_01_extended_lba.py
