[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fsm-tools"
version = "0.1.0"
authors = [
    {name = "biface", email = "fek2qe8i3@mozmail.com"}
]
description = "Formal automata for the Chomsky hierarchy — pure Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "License :: CeCILL-C Free Software License Agreement (CECILL-C)",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage   = "https://fsm-tools.readthedocs.io"
Repository = "https://github.com/biface/automata"
Issues     = "https://github.com/biface/automata/issues"

[project.optional-dependencies]
dev  = [
    "bandit",
    "basedpyright",
    "black",
    "build",
    "flake8",
    "isort",
    "pytest",
    "pytest-cov",
    "tox",
    "tox-uv",
]
test = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short --strict-markers"

[tool.coverage.run]
source_pkgs = ["fsm_tools"]
branch = true

[tool.coverage.report]
#fail_under   = 80
show_missing = true

[tool.coverage.html]
directory = "coverage/coverage_html"
title = "Code Coverage Report"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.black]
line-length    = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile                     = "black"
line_length                 = 100
known_first_party           = "fsm_tools"
multi_line_output           = 3
include_trailing_comma      = true
force_grid_wrap             = 0
use_parentheses             = true
ensure_newline_before_comments = true
